app-in-apps/yaml/glance/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance-service
  namespace: glance
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: glance
  type: ClusterIP
