app-in-apps/yaml/glance/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: glance.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: glance-service
                port:
                  number: 8080
  tls:
    - hosts:
        - glance.nexus-core.dev
      secretName: glance-ingress-secret
